<resources>
    <string name="app_name">NASA Space Library</string>
    <string name="astronomy_picture_of_the_day">Astronomy</string>
    <string name="mars_rover_photos">Mars Rover</string>
    <string name="earth">Earth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="login">Login</string>
    <string name="email">Your Email</string>
    <string name="password">Your Password</string>
    <string name="loginBtn">Login</string>
    <string name="register">Register</string>
    <string name="registerBtn">Register</string>
    <string name="toLogin">Click to login</string>
    <string name="toReg">Click to register</string>
    <string name="logout">Logout</string>
    <string name="learn_more">Learn More...</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum blandit pretium. Vestibulum tempor enim ex. Nulla facilisi. Duis lobortis metus vel ante ullamcorper, sit amet fermentum turpis lacinia. Cras semper velit nisi, a volutpat neque vehicula a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam condimentum pharetra eros, eu tempor ante elementum eu. Pellentesque arcu mauris, consectetur a dignissim et, aliquam ac nisl. Nunc condimentum dignissim felis ac convallis. Sed ullamcorper posuere urna in pulvinar. Mauris condimentum vel dui nec consequat. Aenean malesuada, nisi a tincidunt molestie, odio diam aliquam mauris, iaculis molestie felis velit quis turpis. Quisque aliquet metus non metus egestas, vel euismod erat interdum. Maecenas fringilla bibendum nulla, et venenatis felis ultrices et. Sed vestibulum augue in nunc scelerisque laoreet. Sed luctus vel enim quis luctus. Mauris tellus ipsum, accumsan eget facilisis ac, ullamcorper id dolor. Suspendisse facilisis tortor nisi, ut tempor tortor condimentum ut. Aliquam condimentum aliquet porta.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu vulputate risus, et pretium nibh. Sed ornare metus non orci porta rutrum et in sem. Quisque vehicula congue urna non lacinia. Sed vestibulum vel mauris quis blandit. Fusce egestas, erat in consectetur interdum, sapien tellus venenatis neque, eget pretium leo enim a est.</string>
    <string name="home">Home</string>
    <string name="Game">game</string>
    <string name="game">Game</string>
</resources>